* GITHUB#13841: Improve Tessellatorlogic when two holes share the same vertex with the polygon which was failing
  in valid polygons. (Ignacio Vera)
* GITHUB#13990: Added filter to the toString() method of Knn[Float|Byte]VectorQuery
  and DiversifyingChildren[Float|Byte]KnnVectorQuery. (Viswanath Kuchibhotla)

Build
---------------------

* Upgrade forbiddenapis to version 3.8.  (Uwe Schindler)

Other
---------------------
* GITHUB#13982: Remove duplicate test code. (Lu Xugang)

======================== Lucene 10.0.1 =======================

Bug Fixes
---------------------

* GITHUB#14008: Counts provided by taxonomy facets in addition to another aggregation are now returned together with
  their corresponding ordinals. (Paul King)

======================= Lucene 10.0.0 =======================

API Changes
---------------------
* LUCENE-12092: Remove deprecated UTF8TaxonomyWriterCache. Please use LruTaxonomyWriterCache
  instead. (Vigya Sharma)

* LUCENE-10010: AutomatonQuery, CompiledAutomaton, RunAutomaton, RegExp
  classes no longer determinize NFAs. Instead it is the responsibility
  of the caller to determinize.  (Robert Muir)

* LUCENE-10368: IntTaxonomyFacets has been make pkg-private and serves only as an internal
  implementation detail of taxonomy-faceting. (Greg Miller)

* LUCENE-10400: Remove deprecated dictionary constructors in Kuromoji and Nori (Tomoko Uchida)

* LUCENE-10440: TaxonomyFacets and FloatTaxonomyFacets have been made pkg-private and only serve
  as internal implementation details of taxonomy-faceting. (Greg Miller)

* LUCENE-10431: MultiTermQuery.setRewriteMethod() has been removed. (Alan Woodward)

* LUCENE-10436: Remove deprecated DocValuesFieldExistsQuery, NormsFieldExistsQuery and
  KnnVectorFieldExistsQuery. (Zach Chen, Adrien Grand)

* LUCENE-10561: Reduce class/member visibility of all normalizer and stemmer classes. (Rushabh Shah)

* LUCENE-10266: Move nearest-neighbor search on points to core. (Rushabh Shah)
